--- a/src/app/components/Molecules/IngredientInput.module.css
+++ b/src/app/components/Molecules/IngredientInput.module.css
@@ -18,7 +18,6 @@
 .submitButton {
   width: 100%;
   height: 48px;
-  padding: 20px;
   font-size: 16px;
   color: var(--background);
   background-color: var(--foreground);
